made the scrollbar disappear and fix the try the tools

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -6,6 +6,7 @@
 
 html {
   overflow-x: hidden;
+  overflow-y: scroll;
 }
 ul,
 li {
@@ -16,6 +17,11 @@ body {
   margin: 0;
   width: 100%;
   height: 80vh;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
 }
 
 navbar {
